des modification dans user service pom